# harknotes

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json
apps/desktop/: AGENTS.md  package.json
apps/desktop/scripts/: build-whisper.sh
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: db.rs  export.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/audio/: chunker.rs  mic.rs  mod.rs  recovery.rs  system_linux.rs
apps/desktop/src-tauri/src/transcription/: mod.rs  models.rs  whisper.rs
apps/web/: AGENTS.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: index.css  main.tsx  routeTree.gen.ts
apps/web/src/components/: EditableText.tsx  HarknotesIcon.tsx  WaveformVisualizer.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
apps/web/src/lib/: recording.ts  summarize.ts  theme.ts  transcription.ts  trpc.ts
apps/web/src/lib/__tests__/: prompt.test.ts  summarize.test.ts
apps/web/src/routes/: __root.tsx  index.tsx  meeting.$meetingId.tsx  record.tsx  settings.tsx
tools/project-plugin/: package.json
