[package]
name = "harknotes-desktop"
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0-only"

[lib]
name = "harknotes_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.16"
hound = "3.5"
crossbeam-channel = "0.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rusqlite = { version = "0.37", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[profile.release]
strip = true
lto = true
